--- a/StepItUp/Views/Categories/Index.cshtml
+++ b/StepItUp/Views/Categories/Index.cshtml
@@ -1,4 +1,23 @@
-﻿@{
+﻿@model IEnumerable<Category>
+
+@{
     ViewData["Title"] = "Categories";
 }
+
 <h1>Categories</h1>
+<a asp-action="Create">Add a Category</a>
+<table class="table table-striped table-hover">
+    <thead>
+        <th>Name</th>
+    </thead>
+    <tbody>
+        @foreach (var category in Model)
+        {
+            <tr>
+                <td>
+                    @category.Name
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
