--- a/StepItUp/Views/Shared/_Layout.cshtml
+++ b/StepItUp/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                             <a class="nav-link text-dark" asp-controller="Home" asp-action="About">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-controller="Categories" asp-action="Index">Categories</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
