--- a/StepItUp/Views/Shared/_Layout.cshtml
+++ b/StepItUp/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Categories" asp-action="Index">Categories</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Shop" asp-action="Index">Shop</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
