--- a/StepItUp/Views/Shared/_Layout.cshtml
+++ b/StepItUp/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                             <a class="nav-link text-dark" asp-controller="Categories" asp-action="Index">Categories</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Products" asp-action="Index">Products</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Shop" asp-action="Index">Shop</a>
                         </li>
                     </ul>
