--- a/StepItUp/Views/Shop/Cart.cshtml
+++ b/StepItUp/Views/Shop/Cart.cshtml
@@ -6,9 +6,6 @@
 
 <h1>Cart</h1>
 
-@* <p>
-    <a asp-action="Create">Create New</a>
-</p> *@
 <table class="table">
     <thead>
         <tr>
@@ -37,7 +34,7 @@
                 @Html.DisplayFor(modelItem => item.CustomerId)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Product.ProductId)
+                @Html.DisplayFor(modelItem => item.Product.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
@@ -49,11 +46,19 @@
                 @Html.DisplayFor(modelItem => item.DateCreated)
             </td>
             <td>
-                @* <a asp-action="Edit" asp-route-id="@item.CartId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CartId">Details</a> | *@
                 <a asp-action="RemoveFromCart" asp-route-id="@item.CartId">Delete</a>
             </td>
         </tr>
 }
+    <tr>
+        <td colspan="2" class="text-right">Total Amount:</td>
+        <td style="text-align: right">@ViewBag.TotalAmount</td>
+        <td colspan="3"></td>
+    </tr>
     </tbody>
 </table>
+
+<div class="col-12 mb-auto text-info">
+    <a class="btn btn-info" asp-action="Index">Continue Shopping</a>
+    <a class="btn btn-success" asp-action="Checkout">Go to Checkout >></a>
+</div>
